--- a/index.html
+++ b/index.html
@@ -79,7 +79,226 @@
         </div>
       </div>
     </div>
+    <!-- do you know -->
+    <div class="container mt-5">
+      <p class="fs-2 fw-bold">Did you know?</p>
+      <p>We’ve been really busy this year solving problems students are facing across the country.</p>
+      <div style="height: 2px; background-color: black; margin-top: 50px;"></div>
+      <div class="row mt-4">
+        <div class="col-6 col-md-3 ">
+          <p class="fs-1 fw-bold my-0">87%</p>
+          <p class="text-danger my-0">Employers</p>
+          <p>believe that new graduates <br> lack wider skills</p>
+        </div>
+        <div class="col-6 col-md-3">
+          <p class="fs-1 fw-bold my-0">70%</p>
+          <p class="text-danger my-0">Students</p>
+          <p>believe that new graduates <br> lack wider skills</p>
+        </div>
+        <div class="col-6 col-md-3">
+          <p class="fs-1 fw-bold my-0">82%</p>
+          <p class="text-danger my-0">Corporations</p>
+          <p>believe that new graduates <br> lack wider skills</p>
+        </div>
+        <div class="col-6 col-md-3">
+          <p class="fs-1 fw-bold my-0">23%</p>
+          <p class="text-danger my-0">Students</p>
+          <p>believe that new graduates <br> lack wider skills</p>
+        </div>
+      </div>
+    </div>
+    <!-- how it work -->
+    <div class="container my-5">
+      <div class="d-flex justify-content-between align-items-center w-100">
+        <div class="d-none d-md-block ms-auto">
+          <img class="w-50 img-fluid" src="./img/Decoration.png" alt="">
+        </div>
+        <div class=" text-center">
+          <p class="fw-bold">Follow our path to make your dream career, your reality ...</p>
+          <p class="fs-1 fw-bold">How it works?</p>
+        </div>
+        <div class="d-none d-md-block ms-auto">
+          <img class="w-50 img-fluid" src="./img/Decoration.png" alt="">
+        </div>
+      </div>
+    </div>
+    <!-- discover your skill -->
+    <div class="container my-5">
+      <div class="d-flex justify-content-between align-items-center flex-column flex-md-row">
+        <div>
+          <p class="fs-1 fw-bold">Discover Your Skills</p>
+          <p class="fw-bold text-secondary">Uncover skills developed through your life and work experiences.
+          </p>
+          <button class="btn btn-danger mt-3" type="btn">Register Interest</button>
+        </div>
+        <div>
+          <img class="img-fluid" src="./img/Discover Your Skills Photo.png" alt="">
+        </div>
+      </div>
+    </div>
+    <!-- Develop Commercial Awareness  -->
+    <div class="container my-5">
+      <div class="d-flex  justify-content-between align-items-center flex-column flex-md-row">
+
+        <div>
+          <img class="img-fluid" src="./img/explore.png" alt="">
+        </div>
+        <div>
+          <p class="fs-1 fw-bold">Develop Commercial Awareness</p>
+          <p class="fw-bold text-secondary">Explore in-demand Job Roles and identify your transferable skills.
+          </p>
+          <button class="btn btn-danger mt-3" type="btn">Register Interest</button>
+        </div>
+      </div>
+    </div>
+    <!-- Up skill -->
+    <div class="container my-5">
+      <div class="d-flex justify-content-between align-items-center flex-column flex-md-row">
+        <div>
+          <p class="fs-1 fw-bold">Become Job Ready</p>
+          <p class="fw-bold text-secondary">Upskill and broaden your employability skills to an in-demand career.
+          </p>
+          <button class="btn btn-danger mt-3" type="btn">Learn More</button>
+        </div>
+        <div>
+          <img class="img-fluid" src="./img/Upskill Yourself Photo Content.png" alt="">
+        </div>
+      </div>
+    </div>
+    <!-- network -->
+    <div class="container my-5">
+      <div class="d-flex justify-content-between align-items-center flex-column flex-md-row">
+        <div>
+          <img class="img-fluid" src="./img/network.png" alt="">
+        </div>
+        <div>
+          <p class="fs-1 fw-bold">Widen Your Network</p>
+          <p class="fw-bold text-secondary">Fast track your career growth by developing meaningful connections.
+          </p>
+          <button class="btn btn-danger mt-3" type="btn">Register Interest</button>
+        </div>
+
+      </div>
+    </div>
+    <!-- made cv -->
+    <div class="d-flex flex-column flex-md-row justify-content-center gap-5 align-items-center">
+      <img src="./img/landcareer.png" alt="">
+      <div>
+        <p class="fs-3 fw-bold">Land Your Career</p>
+        <p>Bringing bespoke job opportunties based on your set of skills.</p>
+        <div class="d-flex gap-3 align-items-center">
+          <p class="fw-bold">Interested?</p>
+          <img src="./img/Facebook Like.png" alt="">
+          <img src="./img/Facebook Dislike.png" alt="">
+        </div>
+      </div>
+    </div>
+    <!-- land Career -->
+    <div class="d-flex flex-column flex-md-row justify-content-center gap-5 align-items-center">
+
+      <div>
+        <p class="fs-3 fw-bold">Tailor-made CV</p>
+        <p>Curate your CV personalised to your Ideal Job Role.</p>
+        <div class="d-flex gap-3 align-items-center">
+          <p class="fw-bold">Interested?</p>
+          <img src="./img/Facebook Like.png" alt="">
+          <img src="./img/Facebook Dislike.png" alt="">
+        </div>
+      </div>
+      <img src="./img/madecv.png" alt="">
+    </div>
+    <!-- talking -->
+    <div class="container">
+      <div class="d-flex 
+      justify-content-between align-items-center">
+        <div>
+          <p class="fs-3 fw-bold mb-0">Our customers keep talking</p>
+          <p>Listen to what they say about our product offering right here</p>
+        </div>
+        <button class="btn btn-lg btn btn-danger">Join the conversation</button>
+      </div>
+      <div class="d-flex flex-column flex-md-row justify-content-between gap-4">
+        <div class="p-md-5 ">
+          <img src="./img/“.png" alt="">
+          <p class="mt-3 fs-5">To be able to connect with, and be exposed to other people with other skills and
+            different
+            ideas is the
+            starting point
+            of creating something new</p>
+          <p class="fw-bold mb-0">Ossian Radovini</p>
+          <p class="fw-light">Student at Bath Spa University</p>
+        </div>
+        <div class="p-md-5 ">
+          <img src="./img/“.png" alt="">
+          <p class="mt-3 fs-5">They helped me filter down talent based on personality traits and competencies to ensure
+            they’re the right match for the
+            company</p>
+          <p class="fw-bold mb-0">Camerson Montrose</p>
+          <p class="fw-light">Recruiter for Law Firms</p>
+        </div>
+        <div class="p-md-5 ">
+          <img src="./img/“.png" alt="">
+          <p class="mt-3 fs-5">They helped me find a career path that actually excites me! Now I know what skills I need
+            to gain in order to get my
+            dream job</p>
+          <p class="fw-bold mb-0">Charlie Jones</p>
+          <p class="fw-light">Student at University of the West of England</p>
+        </div>
+      </div>
+    </div>
   </main>
+  <footer class=" bg-white py-5">
+    <div class="container">
+      <div class="row  gap-3 gap-md-0">
+        <div class="col-md-3 col-12">
+          <div class="">
+            <img src="./img/logo.png" alt="">
+            <p class="my-0 text-secondary">Level39</p>
+            <p class="my-0 text-secondary">One Canada Square.</p>
+            <p class="my-0 text-secondary">Canary Wharf.</p>
+            <p class="my-0 text-secondary">London</p>
+            <p class="my-0 text-secondary">E1451B</p>
+          </div>
+        </div>
+        <div class="col-9 row">
+          <div class="col-12 col-md-6 col-lg-3">
+            <h3>Home</h3>
+            <p class="my-0 text-secondary">Collaborations</p>
+            <p class="my-0 text-secondary">Statistics</p>
+            <p class="my-0 text-secondary">How it Works</p>
+            <p class="my-0 text-secondary">Testimonials</p>
+
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <h3>About Us</h3>
+            <p class="my-0 text-secondary">Who We Are</p>
+            <p class="my-0 text-secondary">Mission statement</p>
+            <p class="my-0 text-secondary">Our Vision</p>
+            <p class="my-0 text-secondary">The Team</p>
+
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <h3>UpSkill</h3>
+            <p class="my-0 text-secondary">It Support</p>
+            <p class="my-0 text-secondary">Project Managment</p>
+            <p class="my-0 text-secondary">Data Analysts</p>
+            <p class="my-0 text-secondary">Ux Design</p>
+
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <h3>Contact Us</h3>
+            <p class="my-0 text-secondary">Your message</p>
+            <p class="my-0 text-secondary">Email</p>
+            <p class="my-0 text-secondary">Phone number</p>
+            <p class="my-0 text-secondary">Linkeding</p>
+
+          </div>
+        </div>
+      </div>
+      <hr>
+      <p class="text-center">Copyright 2022 Creatives For You LTD</p>
+    </div>
+  </footer>
 
 
 
