--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- style css -->
   <link rel="stylesheet" href="style.css">
 
-  <title>Hello, world!</title>
+  <title>Bootstrap Project</title>
 </head>
 
 <body>
